# MLServer-build

./: .gitignore  pom.xml  ruleset2.0.yaml
ci/: drop.Jenkinsfile  precodereview.Jenkinsfile
images/: docker-bake.hcl
rulesets/: 3pp.yaml  (+3 more)
src/pytorch/: .dockerignore  README.md  constraints.txt  mlserver_constraints.txt  pyproject.toml  requirements.txt  setup.py
src/pytorch/mlserver_pytorch/: __init__.py  common.py  model-settings.json  runtime.py
src/pytorch/models/mnist/bytes/: toBytes.py
src/pytorch/models/mnist/bytes/mlserver_inputs/: 0.json
src/pytorch/models/mnist/model/: notebook.ipynb  requirements.txt
src/pytorch/models/mnist/tensor/: totensor.py  utils.py
src/pytorch/models/mnist/tensor/inputs/: sample.txt
src/pytorch/models/mnist/tensor/mlserver_inputs/: grpc_input_0_png.json  grpc_input_1_png.json  input_0_png.json  input_1_png.json
src/pytorch/models/mnist/tensor/mlserver_outputs/: grpc_response_0_png.txt  grpc_response_1_png.txt  output_0_png.json  output_1_png.json
src/tensorflow/: .dockerignore  .gitignore  README.md  constraints.txt  pyproject.toml  requirements.txt  setup.py
src/tensorflow/mlserver_tensorflow/: __init__.py  common.py  model-settings.json  runtime.py  settings.json
src/tensorflow/models/mobilenet_v2/: inference_request.json  inference_request_grpc.json  inference_response.json  inference_response_grpc.txt  mobileNetV2.ipynb  requirements.txt
src/tensorflow/models/mobilenet_v2/model/mobilenet_v2/: fingerprint.pb  saved_model.pb
src/tensorflow/models/mobilenet_v2/model/mobilenet_v2/variables/: variables.index
(+34 files in other folders)
